<resources>
    <string name="app_name">music-player</string>
    <string name="play">play</string>
    <string name="nextTrack">&gt;&gt;</string>
    <string name="previousTrack">&lt;&lt;</string>
    <string name="pause">pause</string>
    <string name="back">back</string>
    <string name="time_zero">0:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
