<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".music_player">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="368dp"
            android:layout_height="fill_parent" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp"
            android:gravity="bottom">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center">
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/track-name" android:textSize="30sp"
                    android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center">
            <Button
                    android:text="@string/previousTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="1"/>
            <Button
                    android:text="Play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button2" android:layout_weight="1"
                    tools:text="@string/play"/>
            <Button
                    android:text="@string/nextTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center">
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/seek_bar"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>